--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+      <script>
+     window.oncontextmenu =()=>{
+     return false;
+ };
+  </script>
     <section id="main">
         <div id="container">
             <input type="number" id="weight"  placeholder="weight in kgs">
